# social_network_api

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/versions/: 2551ba77f6cb_init.py  3dd73f1f421f_init_db.py  7fbdbb8ed358_init.py  bdfb16737c80_db_init.py  bf98e1f0240e_db_init.py  c81d80410486_init.py  e70b400e93b1_init.py  e745a2fb922a_init.py
app/: config.py  depends.py  main.py  models.py  prestart.sh  routes.py  schemas.py  utils.py
app/db/: __init__.py  session.py
fluentd/: Dockerfile
fluentd/conf/: fluent.conf
grafana/: Dockerfile
grafana/dashboards/: dashboard.json
grafana/provisioning/dashboards/: dashboard.yml
prometheus/: config.yml
